# cookiecutter-metarepo

./: .clinerules-architect  .clinerules-ask  README.md
cookiecutter-metarepos/: .gitignore  README.md  cookiecutter.json  requirements-test.txt  test_template.py
cookiecutter-metarepos/hooks/: post_gen_project.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/: README.md
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/: .coveragerc  metarepo.toml  pyproject.toml
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/cli/: __init__.py  main.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/core/: __init__.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/core/events/: __init__.py  logger.py  manager.py  schema.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/core/plugin/: __init__.py  loader.py  manager.py  provider.py  schema.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugin-template/hooks/: post_gen_project.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugin-template/{{cookiecutter.plugin_slug}}/: README.md  plugin.py  plugin.toml  pyproject.toml
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugin-template/{{cookiecutter.plugin_slug}}/tests/: test_plugin.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugins/fs_monitor/: README.md  plugin.py  plugin.toml
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugins/fs_monitor/tests/: test_plugin.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugins/project_gen/: README.md  plugin.py  plugin.toml
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/plugins/project_gen/tests/: test_plugin.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/tests/: README.md  __init__.py  conftest.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/tests/cli/: conftest.py  test_config.toml  test_main.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/tests/core/: __init__.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/tests/core/events/: __init__.py  test_logger.py  test_manager.py  test_schema.py
cookiecutter-metarepos/{{cookiecutter.project_name}}/meta/tests/core/plugin/: test_manager.py  test_schema.py
memory-bank/: activeContext.md  architecture.md  decisionLog.md  developmentPlan.md  futureFeatures.md  phase1-detail.md  productContext.md  progress.md  projectBrief.md
memory-bank/old-convos/: 01-initial-project-build.md
plugin-template/: cookiecutter.json
